<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <DUT Name="ST_Component_TE1_HMI" Id="{96a801c4-7687-463f-abb1-6372ae7f9f7e}">
    <Declaration><![CDATA[TYPE ST_Component_TE1_HMI :
STRUCT
	bZmienneTypoweDlaComponent_TE1	: BOOL;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>