<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <DUT Name="ST_Component_TE1_HMI_Link" Id="{7543178d-54a9-4b5d-bb35-6a7868ae2b58}">
    <Declaration><![CDATA[TYPE ST_Component_TE1_HMI_Link EXTENDS ST_BaseComponent_HMI_Link :
STRUCT
	stComponent_TE1		: ST_Component_TE1_HMI;
	
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>